[gd_scene load_steps=16 format=3 uid="uid://6fmdfddl6dkc"]

[ext_resource type="Texture2D" uid="uid://dnmihy1luvbmi" path="res://assets/sprites/level_objects/offering shrine.png" id="1_qyktf"]
[ext_resource type="Script" path="res://scripts/offering shrine.gd" id="1_ueftv"]
[ext_resource type="Shader" path="res://shaders/highlight.gdshader" id="2_h7ffm"]
[ext_resource type="AudioStream" uid="uid://uswapymi1wdl" path="res://assets/sound effects/level_object_sounds/offering_shrine_chime.mp3" id="3_ojaql"]
[ext_resource type="FontFile" uid="uid://s0bpnvolv2i8" path="res://assets/fonts/PixelOperator8.ttf" id="5_kwcm2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hcyye"]
resource_local_to_scene = true
shader = ExtResource("2_h7ffm")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/enabled = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_npxd1"]
size = Vector2(24, 25)

[sub_resource type="Curve" id="Curve_fbfds"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.87251, 13.3556), -246.012, -246.012, 0, 0, Vector2(1, 52.4207), -462.205, -462.205, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_i4x56"]
_data = [Vector2(0.00398406, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.651968), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_nymuo"]
offsets = PackedFloat32Array(0.0852018, 0.538117, 0.843049, 0.995516)
colors = PackedColorArray(0.909804, 0.823529, 0.509804, 1, 0.913725, 0.521569, 0.215686, 1, 0.92549, 0.152941, 0.247059, 1, 0.92549, 0.152941, 0.247059, 0)

[sub_resource type="Gradient" id="Gradient_1kmxy"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lpaax"]
resource_local_to_scene = true
gradient = SubResource("Gradient_1kmxy")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_hi577"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.92549, 0.152941, 0.247059, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.937712, 0.3796, 0.380388, 1)]
}

[sub_resource type="Animation" id="Animation_u810r"]
resource_name = "flame"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.92549, 0.152941, 0.247059, 1), Color(0.913725, 0.521569, 0.215686, 1), Color(0.968627, 0.952941, 0.717647, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D2:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.92549, 0.152941, 0.247059, 1), Color(0.913725, 0.521569, 0.215686, 1), Color(0.968627, 0.952941, 0.717647, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tnn82"]
_data = {
"RESET": SubResource("Animation_hi577"),
"flame": SubResource("Animation_u810r")
}

[node name="offering shrine" type="Node2D"]
script = ExtResource("1_ueftv")

[node name="SoulLabel" type="Label" parent="."]
z_index = 10
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -40.0
offset_right = 28.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_kwcm2")
theme_override_font_sizes/font_size = 8
text = "0/0 souls"
horizontal_alignment = 1

[node name="ShrineSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_hcyye")
position = Vector2(0, -16)
texture = ExtResource("1_qyktf")

[node name="BuyTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DetectPlayer" type="Area2D" parent="."]
collision_mask = 2

[node name="DetectShape" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2(0, -12.5)
shape = SubResource("RectangleShape2D_npxd1")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 1
position = Vector2(-10, -5)
amount = 10
lifetime = 0.2
speed_scale = 0.1
explosiveness = 0.02
randomness = 0.1
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector2(0, -980)
orbit_velocity_min = -0.05
orbit_velocity_max = 0.05
radial_accel_min = -100.0
radial_accel_curve = SubResource("Curve_fbfds")
angle_min = -45.0
angle_max = 45.0
scale_amount_max = 1.5
scale_amount_curve = SubResource("Curve_i4x56")
color_ramp = SubResource("Gradient_nymuo")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
z_index = 1
position = Vector2(10, -5)
amount = 10
lifetime = 0.2
speed_scale = 0.1
explosiveness = 0.02
randomness = 0.1
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector2(0, -980)
orbit_velocity_min = -0.05
orbit_velocity_max = 0.05
radial_accel_min = -100.0
radial_accel_curve = SubResource("Curve_fbfds")
angle_min = -45.0
angle_max = 45.0
scale_amount_max = 1.5
scale_amount_curve = SubResource("Curve_i4x56")
color_ramp = SubResource("Gradient_nymuo")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-10, -5)
color = Color(0.92549, 0.152941, 0.247059, 1)
texture = SubResource("GradientTexture2D_lpaax")

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(10, -5)
color = Color(0.937712, 0.3796, 0.380388, 1)
texture = SubResource("GradientTexture2D_lpaax")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tnn82")
}
autoplay = "flame"

[node name="ShrineChimeAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ojaql")
volume_db = -10.0
bus = &"SFX"

[connection signal="timeout" from="BuyTimer" to="." method="_on_buy_timer_timeout"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_detect_player_body_exited"]
[connection signal="input_event" from="DetectPlayer" to="." method="_on_input_event"]
